--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,21 @@ body {
     background: linear-gradient(#0b0c10, #1f2833);
 }
 
+header {
+    background: #66fcf1;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 15%;
+    margin-bottom: 20px;
+}
+
+.main-text {
+    color: #45a29e;
+    font-size: 6rem;
+}
+
 .text {
     font-size: 4em;
     color: white;
@@ -29,10 +44,10 @@ body {
 }
 
 .new-game-btn {
-    margin-bottom: 30px;
-    width: 7rem;
-    height: 3.2rem;
-    font-size: 1.2rem;
+    margin-top: 40px;
+    width: 12rem;
+    height: 6rem;
+    font-size: 2rem;
     border-radius: 20px;
     border: none;
     background: #45a29e;
@@ -45,6 +60,7 @@ body {
     height: 35%;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 35px;
 }
 
 .space {
@@ -56,9 +72,14 @@ body {
 .btn-letter {
     width: 100%;
     height: 101%;
-    font-size: 4rem;
+    font-size: 4.5rem;
     background: #eee;
     color: #45a29e;
+    transition-duration: 0.5s;
+}
+
+.btn-letter:hover {
+    background: #b4f5f2;
 }
 
 @media only screen and (min-width: 580px) {
