--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: 'Comforter Brush', cursive;
+    font-family: 'Comic Neue', cursive;
 }
 
 body {
@@ -41,10 +41,12 @@ header {
     text-decoration-line: underline;
     text-decoration-style: wavy;
     text-decoration-color: white;
+    padding-bottom: 30px;
 }
 
 .new-game-btn {
     margin-top: 40px;
+    margin-bottom: 20px;
     width: 12rem;
     height: 6rem;
     font-size: 2rem;
@@ -52,6 +54,11 @@ header {
     border: none;
     background: #45a29e;
     color: white;
+    transition-duration: 0.5s;
+}
+
+.new-game-btn:hover {
+    background: #6bcac5;
 }
 
 #board {
